Migrate to OpenApiTools from swagger codegen plugin