@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.endava</groupId>
@@ -23,13 +24,12 @@
         <jansi.version>1.18</jansi.version>
         <lombok.version>1.18.12</lombok.version>
         <rgxgen.version>1.1</rgxgen.version>
-        <swagger-codegen-generators.version>1.0.21</swagger-codegen-generators.version>
-        <swagger-codegen.version>3.0.21</swagger-codegen.version>
         <wiremock-jre8.version>2.27.1</wiremock-jre8.version>
         <pitest-maven.version>1.5.2</pitest-maven.version>
         <pitest-junit5-plugin.version>0.12</pitest-junit5-plugin.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
         <guava.version>29.0-jre</guava.version>
+        <openapi-generator.version>4.3.1</openapi-generator.version>
     </properties>
 
     <build>
@@ -39,8 +39,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <jvmArguments>-XX:TieredStopAtLevel=1 -Xverify:none</jvmArguments>
-                    <noverify>true</noverify>
                     <executable>true</executable>
                     <outputDirectory>${project.basedir}</outputDirectory>
                     <excludeDevtools>true</excludeDevtools>
@@ -141,24 +139,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.swagger.codegen.v3</groupId>
-            <artifactId>swagger-codegen</artifactId>
-            <version>${swagger-codegen.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.mail</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger.codegen.v3</groupId>
-            <artifactId>swagger-codegen-generators</artifactId>
-            <version>${swagger-codegen-generators.version}</version>
+            <groupId>org.openapitools</groupId>
+            <artifactId>openapi-generator</artifactId>
+            <version>${openapi-generator.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
